--- a/MC2/Onboarding/Onboarding.storyboard
+++ b/MC2/Onboarding/Onboarding.storyboard
@@ -37,7 +37,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tkL-AU-6H6">
-                                <rect key="frame" x="0.0" y="452" width="414" height="444"/>
+                                <rect key="frame" x="0.0" y="452" width="414" height="525"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kgk-F3-YNa">
@@ -141,7 +141,7 @@ a presentation, write reports and conduct
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.75294117647058822" blue="0.11372549019607843" alpha="1" colorSpace="calibratedRGB"/>
@@ -169,7 +169,7 @@ a presentation, write reports and conduct
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OZi-Yy-TS0">
-                                <rect key="frame" x="0.0" y="452" width="414" height="444"/>
+                                <rect key="frame" x="0.0" y="452" width="414" height="523"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NKP-c9-qW4">
@@ -226,7 +226,7 @@ a presentation, write reports and conduct
                                         <string key="userLabel">Based on our research among entry-levels, it was likely to indicate that  fresh graduates should be able to make  a presentation, write reports and conduct  meetings all in English at work field.</string>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IXl-od-rl3">
                                 <rect key="frame" x="356" y="44" width="38" height="34"/>
@@ -270,7 +270,7 @@ a presentation, write reports and conduct
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ib9-VZ-14M">
-                                <rect key="frame" x="0.0" y="452" width="414" height="444"/>
+                                <rect key="frame" x="0.0" y="452" width="414" height="549"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Og-dM-aZ5">
@@ -303,7 +303,7 @@ Daily Challenges on Your Way To The Top</string>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dNo-p7-PQl">
-                                        <rect key="frame" x="314" y="371" width="88" height="32"/>
+                                        <rect key="frame" x="296" y="371" width="88" height="32"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <state key="normal">
                                             <attributedString key="attributedTitle">
@@ -316,11 +316,11 @@ Daily Challenges on Your Way To The Top</string>
                                             </attributedString>
                                         </state>
                                         <connections>
-                                            <action selector="skip:" destination="SwC-lj-MEb" eventType="touchUpInside" id="XzH-cD-L8j"/>
+                                            <action selector="skip:" destination="SwC-lj-MEb" eventType="touchUpInside" id="iwF-Ah-xSl"/>
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tGe-GI-vki">
                                 <rect key="frame" x="356" y="44" width="38" height="34"/>
